--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,36 @@
-Django
-psycopg2
-wagtail
-Pillow
-django-libsass
-
-# Development requirements
-django-debug-toolbar
-Fabric
-
-# Production requirements
-django-redis
-elasticsearch
-embedly
-redis
-requests
+beautifulsoup4==4.4.1
+dj-database-url==0.3.0
+dj-static==0.0.6
+Django==1.8.7
+django-appconf==1.0.1
+django-compressor==1.6
+django-debug-toolbar==1.4
+django-libsass==0.6
+django-modelcluster==1.0
+django-redis==4.3.0
+django-taggit==0.17.5
+django-toolbelt==0.0.1
+django-treebeard==3.0
+djangorestframework==3.3.1
+ecdsa==0.13
+elasticsearch==2.1.0
+Embedly==0.5.0
+Fabric==1.10.2
+gunicorn==19.4.1
+html5lib==0.999
+httplib2==0.9.2
+libsass==0.9.2
+paramiko==1.16.0
+Pillow==3.0.0
+psycopg2==2.6.1
+pycrypto==2.6.1
+pytz==2015.7
+redis==2.10.5
+requests==2.8.1
+six==1.10.0
+sqlparse==0.1.18
+static3==0.6.1
+Unidecode==0.4.18
+urllib3==1.12
+wagtail==1.2
+Willow==0.2.1
