--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-debug-toolbar==1.4
 django-libsass==0.6
 django-modelcluster==1.0
 django-redis==4.3.0
+django-redis-cache==1.6.4
 django-taggit==0.17.5
 django-toolbelt==0.0.1
 django-treebeard==3.0
