--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 beautifulsoup4==4.4.1
+boto==2.38.0
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.7
@@ -9,6 +10,7 @@ django-libsass==0.6
 django-modelcluster==1.0
 django-redis==4.3.0
 django-redis-cache==1.6.4
+django-storages==1.1.8
 django-taggit==0.17.5
 django-toolbelt==0.0.1
 django-treebeard==3.0
