Install Python3 compatible django-storages

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-libsass==0.6
 django-modelcluster==1.0
 django-redis==4.3.0
 django-redis-cache==1.6.4
-django-storages==1.1.8
+-e git+https://github.com/jschneier/django-storages.git@8ec6b3246da24eeed0c9f4925de611df1911b2bd#egg=django_storages_redux-master
 django-taggit==0.17.5
 django-toolbelt==0.0.1
 django-treebeard==3.0
