--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
+amqp==1.4.7
+anyjson==0.3.3
 beautifulsoup4==4.4.1
+billiard==3.3.0.21
 boto==2.38.0
+celery==3.1.19
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.7
 django-appconf==1.0.1
+django-auth-ldap==1.2.7
+django-celery==3.1.17
 django-compressor==1.6
 django-debug-toolbar==1.4
+django-debug-toolbar-template-timings==0.6.4
 django-libsass==0.6
 django-modelcluster==1.0
 django-redis==4.3.0
 django-redis-cache==1.6.4
--e git+https://github.com/jschneier/django-storages.git@8ec6b3246da24eeed0c9f4925de611df1911b2bd#egg=django_storages_redux-master
+django-storages==1.1.8
 django-taggit==0.17.5
 django-toolbelt==0.0.1
 django-treebeard==3.0
+django-widget-tweaks==1.4.1
 djangorestframework==3.3.1
 ecdsa==0.13
 elasticsearch==2.1.0
@@ -22,19 +30,27 @@ Fabric==1.10.2
 gunicorn==19.4.1
 html5lib==0.999
 httplib2==0.9.2
+kombu==3.0.29
 libsass==0.9.2
+oauthlib==1.0.3
 paramiko==1.16.0
 Pillow==3.0.0
 psycopg2==2.6.1
 pycrypto==2.6.1
+python-ldap==2.4.22
 pytz==2015.7
 redis==2.10.5
 requests==2.8.1
+requests-oauthlib==0.5.0
+simplejson==3.8.1
 six==1.10.0
 sqlparse==0.1.18
 static3==0.6.1
+stripe==1.27.1
+tweepy==3.4.0
 Unidecode==0.4.18
 urllib3==1.12
 wagtail==1.2
+wheel==0.24.0
 whitenoise==2.0.6
 Willow==0.2.1
