--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,120 @@
+alembic==0.7.7
 amqp==1.4.7
 anyjson==0.3.3
+appnope==0.1.0
+backports.ssl-match-hostname==3.4.0.2
 beautifulsoup4==4.4.1
 billiard==3.3.0.21
+blinker==1.4
 boto==2.38.0
 celery==3.1.19
+certifi==2015.4.28
+coverage==3.7.1
+decorator==4.0.2
 dj-database-url==0.3.0
-dj-static==0.0.6
-Django==1.8.7
+Django==1.8.4
 django-appconf==1.0.1
+django-auth-ldap==1.2.7
 django-celery==3.1.17
-django-compressor==1.6
+django-classy-tags==0.4
+django-cms==2.4.3
+django-compressor==1.5
 django-debug-toolbar==1.4
 django-debug-toolbar-template-timings==0.6.4
-django-libsass==0.6
-django-modelcluster==1.0
+django-libsass==0.4
+django-modelcluster==0.6.2
+django-mptt==0.5.2
 django-redis==4.3.0
-django-redis-cache==1.6.4
+django-sekizai==0.7
 django-storages==1.1.8
-django-taggit==0.17.5
-django-toolbelt==0.0.1
+django-taggit==0.17.3
 django-treebeard==3.0
 django-widget-tweaks==1.4.1
+djangocms-installer==0.7.9
 djangorestframework==3.3.1
-ecdsa==0.13
+dominate==2.1.12
 elasticsearch==2.1.0
-Embedly==0.5.0
-Fabric==1.10.2
-gunicorn==19.4.1
+Flask==0.10.1
+Flask-Bootstrap==3.3.5.6
+Flask-Mail==0.9.1
+Flask-Migrate==1.4.0
+Flask-Moment==0.5.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.0
+Flask-WTF==0.12
+functools32==3.2.3.post2
+gnureadline==6.3.3
+google-api-python-client==1.4.0
 html5lib==0.999
-httplib2==0.9.2
+httplib2==0.9.1
+ipykernel==4.0.3
+ipython==4.0.0
+ipython-genutils==0.1.0
+ipywidgets==4.0.2
+itsdangerous==0.24
+Jinja2==2.8
+jsonschema==2.5.1
+jupyter-client==4.0.0
+jupyter-core==4.0.4
 kombu==3.0.29
-libsass==0.9.2
+libsass==0.9.1
+Mako==1.0.1
+MarkupSafe==0.23
+matplotlib==1.4.1
+mistune==0.7.1
+mock==1.0.1
+MySQL-python==1.2.5
+mysqlclient==1.3.6
+nbconvert==4.0.0
+nbformat==4.0.0
+nose==1.3.4
+notebook==4.0.4
+numpy==1.9.0
+oauth2client==1.4.11
 oauthlib==1.0.3
-paramiko==1.16.0
+pandas==0.13.1
+path.py==7.7.1
+pexpect==3.3
+pickleshare==0.5
 Pillow==3.0.0
 psycopg2==2.6.1
-pycrypto==2.6.1
+ptyprocess==0.5
+pyasn1==0.1.7
+pyasn1-modules==0.0.5
+PyBrain==0.3
+Pygments==2.0.2
+pyparsing==2.0.3
+python-dateutil==2.2
+python-ldap==2.4.22
 pytz==2015.7
+pyzmq==14.7.0
 redis==2.10.5
 requests==2.8.1
 requests-oauthlib==0.5.0
+rsa==3.1.4
+scikit-learn==0.15.2
+scipy==0.14.0
+seaborn==0.6.0
+simplegeneric==0.8.1
 simplejson==3.8.1
 six==1.10.0
+South==1.0
+SQLAlchemy==1.0.8
 sqlparse==0.1.18
-static3==0.6.1
 stripe==1.27.1
+terminado==0.5
+tornado==4.2.1
+traitlets==4.0.0
 tweepy==3.4.0
+twitter==1.17.1
+tzlocal==1.2
 Unidecode==0.4.18
+uritemplate==0.6
 urllib3==1.12
-wagtail==1.2
+vboxapi==1.0
+virtualenv==13.1.2
+wagtail==1.1
+Werkzeug==0.10.4
 wheel==0.24.0
-whitenoise==2.0.6
 Willow==0.2.1
+WTForms==2.0.2
