--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ ecdsa==0.13
 elasticsearch==2.1.0
 Embedly==0.5.0
 Fabric==1.10.2
+gunicorn==19.4.1
 html5lib==0.999
 httplib2==0.9.2
 libsass==0.9.3
