--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==1.8.7
 django-appconf==1.0.1
 django-compressor==1.6
 django-debug-toolbar==1.4
+django-disqus==0.5
 django-libsass==0.6
 django-modelcluster==1.0
 django-redis==4.3.0
@@ -20,7 +21,9 @@ gunicorn==19.4.1
 html5lib==0.999
 httplib2==0.9.2
 libsass==0.9.3
+mock==1.3.0
 paramiko==1.16.0
+pbr==1.8.1
 Pillow==3.0.0
 psycopg2==2.6.1
 pycrypto==2.6.1
